# rizzo-pii

./: .env.example  .env.notarize.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  build_mac.sh  create_mock_model.py  rizzo_pii_guardrail.py
docs/: BUILD.md  CHANGELOG.md  FORMATO_DATI.md  index.html
integrations/presidio/: NOTICE  README.md  pyproject.toml
integrations/presidio/docker/: Dockerfile  docker-compose.yml
integrations/presidio/examples/: litellm-config.example.yaml  litellm_config_presidio.yaml  litellm_guardrail_http.py  roundtrip_test.py
integrations/presidio/rizzo_presidio/: __init__.py  analyzer_app.py  checksum_recognizers.py  engine.py  model_recognizer.py  validators.py
integrations/presidio/tests/: test_merge_and_reversible.py  test_taxonomy.py  test_validators.py
src/app/: app.py  desktop_app.py  serve.py  server_config.py
src/data_pipeline/: contribute_dataset.py  generate_synthetic_pii.py  validate_and_merge.py
src/integrations/presidio/: README.md  engine.py  it_legal_recognizers.py  litellm_guardrail.py  litellm_guardrail_http.py  rizzo_recognizer.py  roundtrip_test.py  service.py  taxonomy.py
tauri/: macos_python_entitlements.plist
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs
tauri/ui/: index.html
